--- a/transmission/configs/supervisord.conf.tmpl
+++ b/transmission/configs/supervisord.conf.tmpl
@@ -1,4 +1,4 @@
-{{ dir "/etc" }}{{ name "supervisor.conf" }}
+{{ dir "/etc" }}{{ name "supervisord.conf" }}
 [supervisord]
 nodaemon  = true
 user      = root
