--- a/btsync/configs/btsync.conf.tmpl
+++ b/btsync/configs/btsync.conf.tmpl
@@ -1,6 +1,6 @@
 { 
-  "device_name": "Docker BTsync",
-  "listening_port" : 55555,
+  "device_name": {{ default .Env.DEVICE_NAME "docker btsync" }},
+  "listening_port" : {{ default .Env.LISTEN_PORT 55555 }},
   "storage_path" : "/btsync/.sync",
   "check_for_updates" : true, 
   "use_upnp" : true,
@@ -8,7 +8,7 @@
   "upload_limit" : 0, 
   "webui" :
   {
-    "listen" : "0.0.0.0:8888",
+    "listen" : "0.0.0.0:{{ default .Env.UI_PORT "8888" }}",
     "login" : "{{ default .Env.USERNAME "admin" }}",
     "password" : "{{ default .Env.PASSWORD "admin" }}"
   }
