--- a/couchpotato/configs/supervisord.conf.tmpl
+++ b/couchpotato/configs/supervisord.conf.tmpl
@@ -31,7 +31,7 @@ stderr_logfile          = /dev/stderr
 stderr_logfile_maxbytes = 0
 
 [program:updater]
-command                 = python -u /usr/local/bin/updater.py -a couchpotato -b {{ default .Env.COUCHPOTATO_CHANNEL "master" }} -f {{ default .Env.UPDATE_FREQUENCY "86400" }}
+command                 = escarole -C /escarole.yaml
 stdout_logfile          = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile          = /dev/stderr
