--- a/sickrage/configs/supervisord.conf.tmpl
+++ b/sickrage/configs/supervisord.conf.tmpl
@@ -30,7 +30,7 @@ stderr_logfile          = /dev/stderr
 stderr_logfile_maxbytes = 0
 
 [program:updater]
-command                 = python -u /usr/local/bin/updater.py -a sickrage -b {{ default .Env.SICKRAGE_CHANNEL "master" }} -f {{ default .Env.UPDATE_FREQUENCY "28800" }}
+command                 = escarole -C /escarole.yaml
 stdout_logfile          = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile          = /dev/stderr
