Make sure everyone is using latest tmplnator. Be explicit with escarole.

--- a/couchpotato/configs/escarole.yaml.tmpl
+++ b/couchpotato/configs/escarole.yaml.tmpl
@@ -3,3 +3,4 @@
   name: couchpotato
   directory: {{ default .Env.COUCHPOTATO_HOME "/couchpotato" }}
   command: supervisorctl restart couchpotato
+  git: true
