--- a/sickrage/configs/escarole.yaml.tmpl
+++ b/sickrage/configs/escarole.yaml.tmpl
@@ -1,5 +1,4 @@
-{{ dir "/" }}{{ name "escarole.yaml" }}
----
+{{ path "/" }}---
   name: sickrage
   directory: {{ default .Env.SB_HOME "/sickrage" }}
   command: supervisorctl restart sickrage
