--- a/transmission/configs/pia.ovpn.tmpl
+++ b/transmission/configs/pia.ovpn.tmpl
@@ -16,4 +16,4 @@ crl-verify pia.pem
 log {{ .Env.OPENVPN_LOG }}
 verb {{ .Env.OPENVPN_VERB }}
 mute 10
-{{ dir .Env.OPENVPN_HOME }}{{ name "pia.ovpn" }}
+{{ path .Env.OPENVPN_HOME }}
