--- a/couchpotato/configs/escarole.yaml.tmpl
+++ b/couchpotato/configs/escarole.yaml.tmpl
@@ -1,5 +1,4 @@
-{{ dir "/" }}{{ name "escarole.yaml" }}
----
+{{ path "/" }}---
   name: couchpotato
   directory: {{ default .Env.COUCHPOTATO_HOME "/couchpotato" }}
   command: supervisorctl restart couchpotato
