--- a/plex/configs/escarole.yaml.tmpl
+++ b/plex/configs/escarole.yaml.tmpl
@@ -1,5 +1,4 @@
-{{ dir "/" }}{{ name "escarole.yaml" }}
----
+{{ path "/" }}---
   name: plexmediaserver
   command: /usr/local/bin/plexupdate.sh
   git: false
