--- a/transmission/configs/config.ini.tmpl
+++ b/transmission/configs/config.ini.tmpl
@@ -1,5 +1,4 @@
-{{ dir .Env.TRANSMISSION_HOME }}{{ name "config.ini" }}
-[File_Paths]
+{{ path .Env.TRANSMISSION_HOME }}[File_Paths]
 pia_credentials = /pia.cred
 pia_client_id = /pia_client_id
 transmission_rc = {{ .Env.TRANSMISSION_HOME }}/settings.json
