--- a/transmission/configs/netrc.tmpl
+++ b/transmission/configs/netrc.tmpl
@@ -1,4 +1,4 @@
 machine localhost
   login {{ .Env.RPC_USERNAME }}
   password {{ .Env.RPC_PASSWORD }}
-{{ dir "/root" }}{{ name ".netrc" }}
+{{ file "/root/.netrc" }}
