--- a/transmission/configs/settings.json.tmpl
+++ b/transmission/configs/settings.json.tmpl
@@ -1,4 +1,4 @@
-{{dir .Env.TRANSMISSION_HOME}}{{name "settings.json"}}{
+{{ path .Env.TRANSMISSION_HOME }}{
     "alt-speed-down": 50,
     "alt-speed-enabled": false,
     "alt-speed-time-begin": 540,
