--- a/transmission/configs/supervisord.conf.tmpl
+++ b/transmission/configs/supervisord.conf.tmpl
@@ -23,9 +23,11 @@ stdout_logfile_maxbytes = 0
 stderr_logfile          = /dev/stderr
 stderr_logfile_maxbytes = 0
 
+{{ if eq .Env.ENABLE_CLEANER "true" }}
 [program:cleaner]
 command                 = python -u /usr/local/bin/torrent_cleaner.py -H 127.0.0.1 -p {{ .Env.RPC_PORT }} -f {{ .Env.CLEAN_FREQUENCY }} -r {{ .Env.RATIO_LIMIT }}
 stdout_logfile          = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile          = /dev/stderr
 stderr_logfile_maxbytes = 0
+{{ end }}
