--- a/plex/configs/supervisord.conf.tmpl
+++ b/plex/configs/supervisord.conf.tmpl
@@ -21,7 +21,7 @@ directory               = /usr/lib/plexmediaserver
 user                    = root
 pidfile                 = /plexmediaserver/pms.pid
 autostart               = true
-autorestart             = unexpected
+autorestart             = true
 stopasgroup             = true
 stdout_logfile          = /dev/stderr
 stdout_logfile_maxbytes = 0
