--- a/plex/configs/supervisord.conf.tmpl
+++ b/plex/configs/supervisord.conf.tmpl
@@ -17,7 +17,7 @@ serverurl = unix:///supervisor.sock
 command                 = /usr/local/bin/start_pms
 directory               = /usr/lib/plexmediaserver
 user                    = root
-pidfile                 = /plexmediaserver/pms.pid
+pidfile                 = /pms.pid
 autostart               = true
 autorestart             = true
 stopasgroup             = true
@@ -28,6 +28,8 @@ stderr_logfile_maxbytes = 0
 
 [program:updater]
 command                 = escarole -C /escarole.yaml -i 24h
+autostart               = true
+autorestart             = true
 stdout_logfile          = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile          = /dev/stderr
